--- a/PUG-Elements/docker-compose.yml
+++ b/PUG-Elements/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     image: mysql
     volumes:
       - ./data/:/docker-entrypoint-initdb.d/
+    command: supervisor -e '.' index.js
     environment:
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_USER=user
